--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "dependencies": {
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.6.0",
+    "@openzeppelin/hardhat-upgrades": "^1.19.0",
+    "chai": "^4.3.6",
+    "chai-as-promised": "^7.1.1",
     "erc721a": "^4.0.0",
+    "hardhat": "^2.10.0",
+    "hardhat-etherscan": "^1.0.1",
+    "hardhat-gas-reporter": "^1.0.8",
+    "hardhat-tracer": "^1.1.0-rc.6",
     "truffle-contract-size": "^2.0.1",
     "truffle-plugin-verify": "^0.5.25"
   }
